# ts_ssl

./: .gitignore  LICENSE  README.md  environment-minimal-cpu.yml  environment-minimal-gpu-cuml.yml  environment-minimal-gpu.yml  preload_datasets.py  pyproject.toml
outputs/2025-03-18/00-00-52_francecrops_mini_simclr_resampling/: logs.csv
outputs/2025-03-18/00-06-48_francecrops_nano_simclr_resampling/: logs.csv
runs/: run_francecrops.sh  run_francecrops_small.sh
ts_ssl/: __init__.py  evaluate.py  finetune.py  train.py  trainer.py
ts_ssl/config/: config.yaml  eval.yaml  finetune.yaml
ts_ssl/config/augmentations/: jittering.yaml  masking.yaml  resizing.yaml
ts_ssl/config/dataloaderutil/: default.yaml
ts_ssl/config/dataset/: francecrops_20k_mmap.yaml  francecrops_mini.yaml
ts_ssl/config/loaddatautil/: default.yaml
ts_ssl/config/location/: local.example.yaml
ts_ssl/config/model/: base.yaml  byol.yaml  gcd.yaml  moco.yaml  simclr.yaml  vicreg.yaml
ts_ssl/config/optimizer/: base.yaml
ts_ssl/config/visualizer/: default.yaml
ts_ssl/data/: __init__.py  augmentations.py  datamodule.py  pixelset.py
ts_ssl/models/: base.py  byol.py  gcd.py  moco.py  resnet.py  simclr.py  ssl_base.py  vicreg.py
ts_ssl/models/pseltae/: ltae.py  pse.py  stclassifier.py
ts_ssl/utils/: README.md  README_dataloader_profiler.md  README_visualizer.md  cluster_utils.py  faster_mix_k_means_pytorch.py  logger_manager.py  lr_factory.py  speed_test.py  visualizer.py
ts_ssl/utils/util_config/: config.yaml
ts_ssl/utils/visualizer_config/: config.yaml
(+23 files in other folders)
